:lipstick: Fix jumbotron contrast, make all buttons use pointer

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -31,6 +31,7 @@ body {
 .btn {
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   border-width: 2px;
+  cursor: pointer;
 }
 
 .btn-primary {
@@ -167,6 +168,10 @@ body {
 
 .gray {
   color: #999
+}
+
+.bg-white {
+    background-color: #fff
 }
 
 
